--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <title>activeJS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <style id="style"></style>
@@ -10,64 +11,6 @@
 <div id="div1Wrapper">
     <div id="div1"></div>
 </div>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0
-    }
-
-    * {
-        box-sizing: border-box
-    }
-
-    *::before {
-        box-sizing: border-box
-    }
-
-    *::after {
-        box-sizing: border-box
-    }
-
-    #html {
-        word-break: break-all;
-    }
-
-    #div1 {
-        position: fixed;
-        right: 20px;
-        top: 20px;
-    }
-
-    #div1::before {
-        content: '';
-        display: block;
-        position: absolute;
-    }
-
-    #div1::after {
-        content: '';
-        display: block;
-        position: absolute;
-    }
-
-    @media (max-device-width: 500px) {
-        #html {
-            height: 50vh;
-            overflow: auto;
-        }
-
-        #div1Wrapper {
-            height: 50vh;
-        }
-
-        #div1 {
-            position: relative;
-            top: 0px;
-            right: 0px;
-        }
-    }
-</style>
 <script src="main.js"></script>
 </body>
 </html>
